Project

General

Profile

Actions

Bug #52399

closed

src/os/bluestore/HybridAllocator.cc: FAILED ceph_assert(false)

Added by Neha Ojha over 2 years ago. Updated over 2 years ago.

Status:
Resolved
Priority:
Urgent
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2021-08-23T21:10:17.261+0000 7fc8c36810c0  1 bluestore(td/osd-scrub-repair/1) _open_super_meta min_alloc_size 0x1000
2021-08-23T21:10:17.262+0000 7fc8c36810c0  1 freelist init
2021-08-23T21:10:17.262+0000 7fc8c36810c0  1 freelist _read_cfg
2021-08-23T21:10:17.262+0000 7fc8c36810c0  1 bluestore(td/osd-scrub-repair/1) _init_alloc loaded 100 GiB in 9 extents, allocator type hybrid, capacity 0x1900000000, block size 0x1000, free 0x18ffd78000, fragmentation 3.051833e-07
2021-08-23T21:10:17.262+0000 7fc8c36810c0  4 rocksdb: [db/db_impl/db_impl.cc:447] Shutdown: canceling all background work
2021-08-23T21:10:17.262+0000 7fc8c36810c0  4 rocksdb: [db/db_impl/db_impl.cc:625] Shutdown complete
2021-08-23T21:10:17.262+0000 7fc8c36810c0  1 bluefs umount
2021-08-23T21:10:17.262+0000 7fc8c36810c0  1 bdev(0x55af1bbe8400 td/osd-scrub-repair/1/block) close
2021-08-23T21:10:17.507+0000 7fc8c36810c0  1 bdev(0x55af1bbe8400 td/osd-scrub-repair/1/block) open path td/osd-scrub-repair/1/block
2021-08-23T21:10:17.507+0000 7fc8c36810c0  1 bdev(0x55af1bbe8400 td/osd-scrub-repair/1/block) open size 107374182400 (0x1900000000, 100 GiB) block_size 4096 (4 KiB) rotational discard not supported
2021-08-23T21:10:17.507+0000 7fc8c36810c0  1 bluefs add_block_device bdev 1 path td/osd-scrub-repair/1/block size 100 GiB
2021-08-23T21:10:17.507+0000 7fc8c36810c0  1 bluefs mount
2021-08-23T21:10:17.507+0000 7fc8c36810c0  1 bluefs _init_alloc shared, id 1, capacity 0x1900000000, block size 0x10000
2021-08-23T21:10:17.510+0000 7fc8c36810c0 -1 HybridAllocator init_rm_free lambdaUexpected extent:  0xc80000~10000
2021-08-23T21:10:17.514+0000 7fc8c36810c0 -1 /home/jenkins-build/build/workspace/ceph-dev-new-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos8/DIST/centos8/MACHINE_SIZE/gigantic/release/17.0.0-7196-g1dd6321f/rpm/el8/BUILD/ceph-17.0.0-7196-g1dd6321f/src/os/bluestore/HybridAllocator.cc: In function 'HybridAllocator::init_rm_free(uint64_t, uint64_t)::<lambda(uint64_t, uint64_t, bool)>' thread 7fc8c36810c0 time 2021-08-23T21:10:17.511124+0000
/home/jenkins-build/build/workspace/ceph-dev-new-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos8/DIST/centos8/MACHINE_SIZE/gigantic/release/17.0.0-7196-g1dd6321f/rpm/el8/BUILD/ceph-17.0.0-7196-g1dd6321f/src/os/bluestore/HybridAllocator.cc: 175: FAILED ceph_assert(false)

 ceph version 17.0.0-7196-g1dd6321f (1dd6321f75db8454fe8c8f7809f53bc0237d60f2) quincy (dev)
 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x152) [0x55af189d2bb0]
 2: ceph-osd(+0x5cedd1) [0x55af189d2dd1]
 3: ceph-osd(+0xd5f6a9) [0x55af191636a9]
 4: (AvlAllocator::_try_remove_from_tree(unsigned long, unsigned long, std::function<void (unsigned long, unsigned long, bool)>)+0xc3) [0x55af191537e3]
 5: (HybridAllocator::init_rm_free(unsigned long, unsigned long)+0x4f6) [0x55af191648c6]
 6: (BlueFS::mount()+0x212) [0x55af1912bec2]
 7: (BlueStore::_open_bluefs(bool, bool)+0x94) [0x55af18ff1404]
 8: (BlueStore::_prepare_db_environment(bool, bool, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*)+0x6e1) [0x55af18ff2561]
 9: (BlueStore::_open_db(bool, bool, bool)+0x15c) [0x55af18ff389c]
 10: (BlueStore::_open_db_and_around(bool, bool)+0x322) [0x55af1906a8c2]
 11: (BlueStore::_mount()+0x1ae) [0x55af1906d60e]
 12: (OSD::init()+0x3ba) [0x55af18b0e16a]
 13: main()
 14: __libc_start_main()
 15: _start()

/a/yuriw-2021-08-23_19:18:26-rados-wip-yuri3-testing-2021-08-23-0808-distro-basic-smithi/6353262/remote/smithi142/log - https://trello.com/c/sPHg8Syp test batch has no bluestore PRs


Related issues 1 (0 open1 closed)

Has duplicate bluestore - Bug #52576: ceph_test_objectstore asserts at HybridAllocatorDuplicate

Actions
Actions #1

Updated by Neha Ojha over 2 years ago

  • Priority changed from Normal to Urgent

/a/yuriw-2021-08-26_18:40:53-rados-wip-yuri7-testing-2021-08-26-0841-distro-basic-smithi/6360320/
/a/yuriw-2021-08-26_18:40:53-rados-wip-yuri7-testing-2021-08-26-0841-distro-basic-smithi/6360350

Actions #2

Updated by Neha Ojha over 2 years ago

  • Assignee set to Gabriel BenHanokh
Actions #4

Updated by Neha Ojha over 2 years ago

  • Has duplicate Bug #52576: ceph_test_objectstore asserts at HybridAllocator added
Actions #5

Updated by Neha Ojha over 2 years ago

  • Status changed from New to In Progress
Actions #6

Updated by Gabriel BenHanokh over 2 years ago

  • Pull request ID set to 43583

PR is ready

Actions #7

Updated by Igor Fedotov over 2 years ago

  • Status changed from In Progress to Fix Under Review
Actions #8

Updated by Neha Ojha over 2 years ago

  • Pull request ID deleted (43583)
Actions #9

Updated by Sage Weil over 2 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF