os/bluestore: Disable compaction then no-column-b is storing allocations to bluefs file

During BlueStore umount we store current allocation state to disk, in form of bluefs file.
If RocksDB was performing compaction during capture of allocator state, it could cause corruption.
Solution is to delete db (stop RocksDB) before state capture.

Fixes: https://tracker.ceph.com/issues/52399
Signed-off-by: Adam Kupczyk <akupczyk@redhat.com>